--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,7 +12,7 @@ body {
 <title>Insert title here</title>
 </head>
 <body>
-   안녕하세요.<br >
+   환영합니다.<br >
    <a href="hi">인사하기</a><br >
    <a href="hi?cnt=17">인사하기</a><br >
 </body>
